--- a/customer-center.html
+++ b/customer-center.html
@@ -2,13 +2,15 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8">
-    <title>업비트 - 가장 신뢰받는 디지털 자산 거래소</title>
-   	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+KR&display=swap">
-    <link rel="stylesheet" href="css/all.min.css">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/static.css">
-    <link rel="stylesheet" href="css/customer.css">
-    <link rel="icon" href="img/favicon.jpg">
+    <title>업비트 - 고객센터 - 공지사항</title>
+   	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+KR&display=swap" />
+    <link rel="stylesheet" href="css/all.min.css" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/static.css" />
+    <link rel="stylesheet" href="css/customer.css" />
+    <link rel="icon" href="img/favicon.jpg" />
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/common.js"></script>
   </head>
   <body>
     <header>
