--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!doctype html>
 <html lang="ko">
 	<head>
-		<meta charset="utf-8">
+		<meta charset="utf-8" />
 		<title>업비트 - 가장 신뢰받는 디지털 자산 거래소</title>
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+KR&display=swap">
-		<link rel="stylesheet" href="css/all.min.css">
-		<link rel="stylesheet" href="css/reset.css">
-		<link rel="stylesheet" href="css/main.css">
-		<link rel="icon" href="img/favicon.jpg">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+KR&display=swap" />
+		<link rel="stylesheet" href="css/all.min.css" />
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<link rel="icon" href="img/favicon.jpg" />
+		<script src="js/jquery-3.5.1.min.js"></script>
+		<script src="js/common.js"></script>
+		<script src="js/main.js"></script>
 	</head>
 	<body>
+		<a href="#content" id="skip-nav">본문 바로가기</a>
 		<header>
 			<div class="header-wrap">
 				<a href="#" class="logo"></a>
@@ -25,7 +29,7 @@
 				<nav class="tnb">
 					<ul>
 						<li><a href="#">로그인</a></li>
-						<li><a href="join.html">회원가입</a></li>
+						<li><a href="#">회원가입</a></li>
 						<li class="service-intro">
 						  <a href="#" class="service"><span>서비스소개</span></a>
 						  <div class="service-box">
@@ -117,7 +121,7 @@
 				</nav>
 			</div>
 		</header>
-		<section>
+		<section id="content">
 			<article class="main-visual">
 				<div class="main-wrap">
 					<i class="app-ico01"></i>
@@ -281,9 +285,10 @@
 						<div class="app-slider-bg">
 						  <div class="app-slider-circle-wrap">
 						    <div>
-						     <!--  <button>
-						        <img src="img/sliderbt04.png" alt="">
-						      </button> -->
+						      <a href="#" class="slide-btn">
+						          <img class="on" src="img/sliderbt1.png" alt="">
+						          <img class="off" src="img/sliderbt.png" alt="">
+						      </a>
 						      <p class="app-text">
 						        <span class="app-title">실시간 시세 간편 확인</span>
 						        <span class="app-subtext">
@@ -293,21 +298,23 @@
 						      </p>
 						    </div>
 						    <div>
-						      <!-- <button>
-						        <img src="img/sliderbt.png" alt="">
-						      </button> -->
-						      <p class="app-text">
+						       <a href="#" class="slide-btn">
+						           <img class="on" src="img/sliderbt2.png" alt="">
+						           <img class="off" src="img/sliderbt.png" alt="">
+						       </a> 
+						       <p class="app-text">
 						        <span class="app-title">지정가 도달 시 푸시 알림</span>
 						        <span class="app-subtext">
 						          차트를 보면서 지정가 알림을 설정<br>
 						          빠른 알림 수신
 						        </span>
-						      </p>
+						       </p>
 						    </div>
 						    <div>
-						      <!-- <button>
-						        <img src="img/sliderbt.png" alt="">
-						      </button> -->
+						      <a href="#" class="slide-btn">
+						          <img class="on" src="img/sliderbt3.png" alt="">
+						          <img class="off" src="img/sliderbt.png" alt="">
+						      </a>
 						      <p class="app-text">
 						        <span class="app-title">증권사 MTS 수준의 안전한 거래</span>
 						        <span class="app-subtext">
@@ -317,9 +324,10 @@
 						      </p>
 						    </div>
 						    <div>
-						     <!--  <button>
-						        <img src="img/sliderbt.png" alt="">
-						      </button> -->
+						      <a href="#" class="slide-btn">
+						          <img class="on" src="img/sliderbt4.png" alt="">
+						          <img class="off" src="img/sliderbt.png" alt="">
+						      </a> 
 						      <p class="app-text">
 						        <span class="app-title">실시간 코인 동향과 정보</span>
 						        <span class="app-subtext">
